--- a/work53/pages/mypage_02.html
+++ b/work53/pages/mypage_02.html
@@ -39,7 +39,7 @@
                     </ul>
                 </div>
                 <ul class="tab">
-                    <li>
+                    <li class="active">
                         <h4><span>예약내역</span></h4>
                         <div class="panel">
                             <ul class="list">
@@ -59,7 +59,7 @@
                             <button type="button" class="more">더보기<img src="../assets/images/arrow_down@2x.png" alt=""> </button>
                         </div>
                     </li>
-                    <li class="active">
+                    <li>
                         <h4><span>지난내역</span></h4>
                         <div class="panel">
                             <ul class="list">
@@ -99,7 +99,7 @@
 	</div>
 
     <!-- 공통 팝업(기간검색, 별점주기) -->
-	<div class="layer_popup layer_mypage02">
+	<div class="layer_popup layer_mypage02 period_form">
 		<div class="popup">
 			<h5 class="popup_header">
 				<a href="" class="btn_close">&times;</a>
@@ -122,8 +122,8 @@
                 <!-- 팝업내용2: 별점주기 -->
                 <div class="star_wrap">
                     <h4>이용하셨던 곳은 어떠셨나요?</h4>
-                    <div class="star">
-                        <img src="../assets/images/star_off.jpg" alt="">
+                    <div class="star_type02">
+                        <img src="../assets/images/star_off.png" alt="">
                         <div class="on_img" style="width:0%"></div> <!-- 평점은 width값으로 세팅 -> 0점: 0%, 0.5점: 10%, 1점: 20%, 1.5점: 30%, 2점: 40%, ... -->
                     </div>
                     <div class="btn_wrap">
