--- a/work53/pages/mypage_09.html
+++ b/work53/pages/mypage_09.html
@@ -102,7 +102,7 @@
 	</div>
 
     <!-- 기간 검색 -->
-	<div class="layer_popup layer_period">
+	<div class="layer_popup layer_mypage02 lp_period">
 		<div class="popup">
 			<h5 class="popup_header">
 				<a href="" class="btn_close">&times;</a>
@@ -142,7 +142,7 @@
 
                 $('.mypage02 .period .tab_ty01 > li').removeClass('active');
                 $(this).addClass('active')
-                $('.layer_period').show();
+                $('.layer_mypage02').show();
             });
 
             // 기간설정
