--- a/work53/pages/diagnosis_01.html
+++ b/work53/pages/diagnosis_01.html
@@ -40,7 +40,7 @@
                             <div class="select_ty01">
                                 <select>
                                     <option value="진료중">진료중</option>
-                                    <option value="예약가능">예약가능</option>
+                                    <option value="예약가능" selected>예약가능</option>
                                 </select>
                             </div>
                         </div>
