--- a/work53/pages/mypage_02.html
+++ b/work53/pages/mypage_02.html
@@ -181,9 +181,9 @@
                 buttonText: "Select date",
                 monthNames: ['/ 1', '/ 2', '/ 3', '/ 4', '/ 5', '/ 6', '/ 7', '/ 8', '/ 9', '/ 10', '/ 11', '/ 12'],
                 monthNamesShort: ['/ 1','/ 2','/ 3','/ 4','/ 5','/ 6','/ 7','/ 8','/ 9','/ 10','/ 11','/ 12'],
-                dayNames: ['SUN', 'MON', 'TUE', 'WED', 'THU', 'FRI', 'SAT'],
-                dayNamesShort: ['SUN', 'MON', 'TUE', 'WED', 'THU', 'FRI', 'SAT'],
-                dayNamesMin: ['SUN','MON','TUE','WED','THU','FRI','SAT'],
+                dayNames: ["일", "월", "화", "수", "목", "금", "토"],
+                dayNamesShort: ["일", "월", "화", "수", "목", "금", "토"],
+                dayNamesMin: ["일", "월", "화", "수", "목", "금", "토"],
                 dateFormat: 'yy.mm.dd',
                 minDate : 0,
                 showMonthAfterYear: true,
@@ -195,9 +195,9 @@
                 buttonText: "Select date",
                 monthNames: ['/ 1', '/ 2', '/ 3', '/ 4', '/ 5', '/ 6', '/ 7', '/ 8', '/ 9', '/ 10', '/ 11', '/ 12'],
                 monthNamesShort: ['/ 1','/ 2','/ 3','/ 4','/ 5','/ 6','/ 7','/ 8','/ 9','/ 10','/ 11','/ 12'],
-                dayNames: ['SUN', 'MON', 'TUE', 'WED', 'THU', 'FRI', 'SAT'],
-                dayNamesShort: ['SUN', 'MON', 'TUE', 'WED', 'THU', 'FRI', 'SAT'],
-                dayNamesMin: ['SUN','MON','TUE','WED','THU','FRI','SAT'],
+                dayNames: ["일", "월", "화", "수", "목", "금", "토"],
+                dayNamesShort: ["일", "월", "화", "수", "목", "금", "토"],
+                dayNamesMin: ["일", "월", "화", "수", "목", "금", "토"],
                 dateFormat: 'yy.mm.dd',
                 minDate : 0,
                 showMonthAfterYear: true,
