--- a/work53/pages/hospital_01.html
+++ b/work53/pages/hospital_01.html
@@ -20,10 +20,14 @@
 		</header>
 
 		<div id="container">
-			<div id="content" class="reservation_list">
+			<div id="content" class="reservation_list hospital_01">
+                <div class="select_date">
+                    <img src="../assets/images/icon_calender.png" alt="">
+                    <p>날짜선택</p>
+                </div>
                 <div class="map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.8700812902907!2d127.05867176558732!3d37.51098223506492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca536e4738c97%3A0x336c7537649c9fe4!2z7L2U7JeR7Iqk!5e0!3m2!1sko!2skr!4v1632063100270!5m2!1sko!2skr" height="195" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            		<div class="searchbar_ty03"><input type="text" placeholder="병원명, 지역명"></div>
+            		<div class="searchbar_ty03"><input type="text" placeholder="호텔명, 지역명"></div>
                 </div>
                 <div class="inner">
                     <div class="title_area">
@@ -34,13 +38,13 @@
                             <div class="select_ty01">
                                 <select>
                                     <option value="추천순">추천순</option>
-                                    <option value="리뷰순">리뷰순</option>
+                                    <option value="거리순">거리순</option>
                                 </select>
                             </div>
                             <div class="select_ty01">
                                 <select>
                                     <option value="진료중">진료중</option>
-                                    <option value="마감">마감</option>
+                                    <option value="예약가능" selected>예약가능</option>
                                 </select>
                             </div>
                         </div>
@@ -55,7 +59,6 @@
                                     </div>
                                     <h5>어서와펫호텔</h5>
                                     <p>경기고등학교 정문에서 100m</p>
-                                    <strong>리뷰(10)</strong>
                                 </div>
                                 <!-- <div class="thumb"><img src="../assets/images/no_img@2x.png" alt=""></div> -->
                             </a>
@@ -69,7 +72,6 @@
                                     </div>
                                     <h5>어서와펫호텔</h5>
                                     <p>경기고등학교 정문에서 100m</p>
-                                    <strong>리뷰(10)</strong>
                                 </div>
                                 <div class="thumb"><img src="../assets/images/no_img@2x.png" alt=""></div>
                             </a>
@@ -83,7 +85,6 @@
                                     </div>
                                     <h5>어서와펫호텔</h5>
                                     <p>경기고등학교 정문에서 100m</p>
-                                    <strong>리뷰(10)</strong>
                                 </div>
                                 <div class="thumb"><img src="../assets/images/no_img@2x.png" alt=""></div>
                             </a>
@@ -97,7 +98,6 @@
                                     </div>
                                     <h5>어서와펫호텔</h5>
                                     <p>경기고등학교 정문에서 100m</p>
-                                    <strong>리뷰(10)</strong>
                                 </div>
                                 <div class="thumb"><img src="../assets/images/no_img@2x.png" alt=""></div>
                             </a>
@@ -111,7 +111,6 @@
                                     </div>
                                     <h5>어서와펫호텔</h5>
                                     <p>경기고등학교 정문에서 100m</p>
-                                    <strong>리뷰(10)</strong>
                                 </div>
                                 <div class="thumb"><img src="../assets/images/no_img@2x.png" alt=""></div>
                             </a>
@@ -125,7 +124,6 @@
                                     </div>
                                     <h5>어서와펫호텔</h5>
                                     <p>경기고등학교 정문에서 100m</p>
-                                    <strong>리뷰(10)</strong>
                                 </div>
                                 <div class="thumb"><img src="../assets/images/no_img@2x.png" alt=""></div>
                             </a>
