호텔예약 완료

--- a/work53/pages/diagnosis_02.html
+++ b/work53/pages/diagnosis_02.html
@@ -83,7 +83,7 @@
                         </div>
                         <div class="mt_30 kind">
                             <h5>진료종류</h5>
-                            <ul class="kind_list">
+                            <ul class="select_list kind_list">
                                 <li class="">예방접종</li>
                                 <li>구강검진</li>
                                 <li>피부질환</li>
