--- a/work53/pages/hospital_02.html
+++ b/work53/pages/hospital_02.html
@@ -37,18 +37,51 @@
                     <div class="title_area">
                         <h4>어서와펫호텔</h4>
                         <p>경기고등학교 정문에서 100m</p>
+                        <button type="button" class="like">
+                            <img src="../assets/images/icon@2x.png" alt="좋아요" class="off">
+                            <img src="../assets/images/icon_on@2x.png" alt="좋아요" class="on">
+                            <p>찜하기</p>
+                        </button>
                     </div>
                     <div class="inner">
-                        <div class="time">
-                            <h5>룸 컨디션<p>* 기준 Kg 수에 따라 추가요금 부가 됩니다.</p></h5>
-                            <ul class="select_list">
-                                <li class="">프리미엄</li>
-                                <li>2견 1실</li>
-                                <li>일반실</li>
-                            </ul>
+                        <div class="part">
+                            <h5>체중<p>* 체중에 따른 요금 차이가 없는 곳은 가려집니다.</p></h5>
+                            <div class="swiper-container">
+                                <ul class="swiper-wrapper select_list">
+                                    <li class="swiper-slide active"> ~ 5Kg</li>
+                                    <li class="swiper-slide">5 ~ 10Kg</li>
+                                    <li class="swiper-slide">10Kg ~</li>
+                                    <li class="swiper-slide">10Kg ~ 15kg</li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="calender">
-                            <strong class="month">09</strong>
+                        <div class="part">
+                            <h5>룸 컨디션<p>* 기준 Kg 수에 따라 추가요금 부가 됩니다.</p></h5>
+                            <div class="swiper-container">
+                                <ul class="swiper-wrapper select_list">
+                                    <li class="swiper-slide active">프리미엄</li>
+                                    <li class="swiper-slide disable">2견 1실</li>
+                                    <li class="swiper-slide">일반실</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="part">
+                            <h5>부가서비스<p>* 중복선택 가능합니다.</p></h5>
+                            <div class="swiper-container">
+                                <ul class="swiper-wrapper select_list checkbox">
+                                    <li class="swiper-slide active">위생미용</li>
+                                    <li class="swiper-slide">목욕</li>
+                                    <li class="swiper-slide">버블스파</li>
+                                    <li class="swiper-slide">단독산책</li>
+                                    <!-- <li class="etc input_ty01"><span>기타</span><input type="text" placeholder="갑자기 움직임이 둔하고, 먹지도 않아요."></li> -->
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="calender part">
+                            <div class="month_area">
+                                <strong class="month">09</strong>
+                                <p>* 1박 24시간 기준.</p>
+                            </div>
                             <div class="days">
                                 <span>MON</span>
                                 <span>TUE</span>
@@ -58,42 +91,82 @@
                                 <span>SAT</span>
                                 <span>SUN</span>
                             </div>
-                            <div class="relative">
-                                <div class="swiper-container">
-                                    <!-- class => 시작일: start_day / 중간: gap / 종료일: end_day -->
-                                    <div class="weekend day_wrap">
-                                        <div class="day"><span>1</span></div>
-                                        <div class="day"><span>10</span></div>  
-                                        <div class="day"><span>11</span></div>
-                                        <div class="day"><span>12</span></div>
-                                        <div class="day"><span>13</span></div>
-                                        <div class="day"><span>14</span></div>
-                                        <div class="day"><span>15</span></div>
-                                    </div>
-                                </div>
+                            <!-- class => 시작일: start_day / 중간: gap / 종료일: end_day -->
+                            <div class="weekend day_wrap">
+                                <div class="day"><span>1</span></div>
+                                <div class="day"><span>10</span></div>  
+                                <div class="day"><span>11</span></div>
+                                <div class="day"><span>12</span></div>
+                                <div class="day"><span>13</span></div>
+                                <div class="day"><span>14</span></div>
+                                <div class="day"><span>15</span></div>
                             </div>
                         </div>
-                        <div class="time">
-                            <h5>룸 컨디션<p>* 기준 Kg 수에 따라 추가요금 부가 됩니다.</p></h5>
-                            <ul class="select_list">
-                                <li class="">프리미엄</li>
-                                <li>2견 1실</li>
-                                <li>일반실</li>
-                            </ul>
+                        <div class="part">
+                            <h5>입실시간<p>* 입실시간은 지켜주세요.</p></h5>
+                            <div class="swiper-container select_list_wrap">
+                                <ul class="swiper-wrapper select_list">
+                                    <li class="swiper-slide">09 : 00</li>
+                                    <li class="swiper-slide disable">09 : 30</li>
+                                    <li class="swiper-slide ">10 : 00</li>
+                                    <li class="swiper-slide">10 : 30</li>
+                                    <li class="swiper-slide">11 : 00</li>
+                                    <li class="swiper-slide">11 : 30</li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="kind">
-                            <h5>부가서비스</h5>
-                            <ul class="kind_list">
-                                <li class="active">위생미용</li>
-                                <li>목욕</li>
-                                <li>버블스파</li>
-                                <li>단독산책</li>
-                                <li class="etc input_ty01"><span>기타</span><input type="text" placeholder="갑자기 움직임이 둔하고, 먹지도 않아요."></li>
-                            </ul>
+                        <div class="notice part">
+                            <h5>알아야 할 주의사항이 있나요?</h5>
+                            <div class="etc input_ty01"><span>선택사항</span><input type="text" placeholder="우리 아이의 주의사항 작성해주세요."></div>
                         </div>
+                        <div class="detail_info part">
+                            <h5>상세정보</h5>
+                            <div class="dl_wrap">
+                                <dl>
+                                    <dt>성수기 기준</dt>
+                                    <dd>1~2월, 7~9월, 12월 / 설, 추석명절</dd>
+                                </dl>
+                                <dl>
+                                    <dt>주말</dt>
+                                    <dd>토요일, 공휴일 (입실일 기준)</dd>
+                                </dl>
+                                <dl>
+                                    <dt>입실 기준</dt>
+                                    <dd>
+                                        수컷, 중성화 필수<br>
+                                        연령 5개월이상 ~ 12세 이하 호텔, 놀이터 이용가능<br><br>
+
+                                        1세미만 : 5차 종합백신 + 광견병<br>
+                                        1세이상 : 최근 1년 이내 종합백신 + 광견병 <br>
+                                        ** 항체결과 확인 필요
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>입실제한</dt>
+                                    <dd>
+                                        생리중인 여아<br>
+                                        발열, 구토, 설사, 기침, 콧물, 피부발진 등으로<br>
+                                        질병이 의심되는 반려견    
+                                    </dd>
+                                </dl>
+                                <dl>
+                                    <dt>준비물</dt>
+                                    <dd>개인용품 (사료, 간식, 기저귀, 매너벨트 등)</dd>
+                                </dl>
+                                <dl>
+                                    <dt>시설 / 서비스</dt>
+                                    <dd>
+                                        야외운동장, 수의사 관리, 개별취침, 픽/드롭 가능,<br>
+                                        필수산책, 놀이터 운영, 24시간 직원상주, <br>
+                                        중소형견 / 대형견 구분 관리   
+                                    </dd>
+                                </dl>
+                            </div>
+                        </div>
+                        
                         <!-- <div class="input_ty01"><span>기타</span><input type="text" placeholder="갑자기 움직임이 둔하고, 먹지도 않아요."></div> -->
 
-                        <button type="button" class="btn_ty01 btn_reservation">예약하기</button>
+                        <button type="button" class="btn_ty01 btn_reservation layerpopup_btn">예약하기</button>
                     </div>
                 </div>
 			</div>
@@ -110,24 +183,103 @@
 		</footer>
 	</div>
 
+        <!-- 하단 레이어팝업 -->
+	<div id="" class="layerpopup">
+
+		<!-- s: 예약하기 -->
+		<div class="layer_reserve">
+			<div class="inner sticky_area">
+                <div class="top_fixed">
+                    <div class="title">
+                        <a href="" class="btn_back"><img src="../assets/images/arrow-left-gray@2x.png" alt="뒤로가기"></a>
+                        <h5>로그펫 호텔</h5>
+                    </div>
+                    <p class="sub_title">예약자에게 하고 싶은 말을 적어보세요.</p>
+                </div>
+                <div class="scrolled">
+                    <div class="info_wrap">
+                        <h5 class="name">[ 3박 4일 ] 2견 1실</h5>
+                        <div class="box_wrap">
+                            <div class="box">
+                                <span>체크인</span>
+                                <strong>11.05 월 9:30</strong>
+                            </div>
+                            <div class="box">
+                                <span>체크아웃</span>
+                                <strong>11.06 화 9:30</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dl_wrap">
+                        <dl>
+                            <dt>
+                                1박
+                                <a href="">50,000원</a>
+                                <strong>+3일</strong>
+                            </dt>
+                            <dd>150,000원</dd>
+                        </dl>
+                        <dl>
+                            <dt>위생미용</dt>
+                            <dd>20,000원</dd>
+                        </dl>
+                        <dl>
+                            <dt>단독산책</dt>
+                            <dd>30,000원</dd>
+                        </dl>
+                    </div>
+                    <div class="notice_wrap">
+                        <h5>주의사항이 있나요?</h5>
+                        <p>우리 아가가 다른 친구들한테 물려도 가만히 있어서 놀이시간에 
+                            잘 봐주세요 꼭 부탁드려요. <br>
+                            다른 곳에서 놀이시간에 물려서 피가 났었거든요.</p>
+                    </div>
+                    <div class="agree_wrap">
+                        <div class="box">
+                            <div class="check_ty02">
+                                <input type="checkbox" id="chkAll">
+                                <label for="chkAll">약관 전체 동의</label>
+                            </div>
+                        </div>
+                        <ul class="terms_list">
+                            <li>
+                                <div class="check_ty02">
+                                    <input type="checkbox" id="chk1">
+                                    <label for="chk1">숙소 이용규칙 및 취소/환불규정 동의 (필수)</label>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="check_ty02">
+                                    <input type="checkbox" id="chk2">
+                                    <label for="chk2">개인정보 수집 및 이용 동의 (필수)</label>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="check_ty02">
+                                    <input type="checkbox" id="chk3">
+                                    <label for="chk3">개인정보 제 3자 제공 동의 (필수)</label>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+			</div>
+            <button type="button" class="btn_ty03">200,000원 결제하기</button>
+		</div>
+		<!-- e: 예약하기 -->
+
+	</div>
+
     <script src="../assets/js/jquery.js"></script>
 	<script src="../assets/js/swiper.js"></script>
     <!-- js -->
     <script type="text/javascript" src="../assets/js/moment.min.js"></script>
     <script type="text/javascript" src="../assets/js/daterangepicker.js"></script>
 	<script src="../assets/js/common.js"></script>
+	<script src="../assets/js/content.js"></script>
     
     <script>
         $(document).ready(function() {
-
-            $(document).on('click', '.kind_list > li', function() {
-                $('.kind_list > li').removeClass('active')
-                $(this).addClass('active')
-            })
-            $(document).on('click', '.select_list > li', function() {
-                $('.select_list > li').removeClass('active')
-                $(this).addClass('active')
-            })
 
             function lastWeek(start, end) {
 
@@ -210,6 +362,35 @@
                 lastWeek(start, end);
                 $('.daterangepicker_dim').remove()
             });
+
+            // 시간 슬라이드
+            var timeSwiper = new Swiper(".hospital_02 .select_list_wrap", {
+                slidesPerView: "auto",
+            });
+
+            // 선택 활성화
+            $(document).on('click', '.select_list > li', function() {
+                var $this = $(this);
+                if(!$this.hasClass('disable')) {
+                    if($this.parents('.select_list').hasClass('checkbox')) {
+                        $this.toggleClass('active')
+                    }else {
+                        $this.parents('.select_list').children('li').removeClass('active');
+                        $this.addClass('active');
+                    }
+                }
+            })
+
+            // 선택항목 - 슬라이드
+            $('.swiper-container').each(function(index, element) {
+                var $this = $(this);
+                $this.addClass('instance-' + index);
+
+                var swiper = new Swiper('.instance-' + index, {
+                    slidesPerView : "auto",
+                });
+
+            })
         })
     </script>
 </body>
